# ag-slide-mcp

./: .gitignore  .mcp.json  README.md  pyproject.toml
src/ag_slide_mcp/: __main__.py  auth.py  config.py  google_clients.py  server.py  utils.py
src/ag_slide_mcp/tools/: content.py  export.py  presentation.py  slides.py  template.py
